put some description of the pic

--- a/Week5_Grids/cart.html
+++ b/Week5_Grids/cart.html
@@ -103,6 +103,14 @@
           </div>
   			</div>
 
+<!--             <div class="personalB">
+              <form method="post" action="#" id="comments">
+                <label for ="form-name">PROMOTION CODE:</label>
+              <input type="text" id="personalB" name="form-name" value="get1free">
+              <a class="cartBut2" href=".html">APPLY</a>
+              </form>
+            </div> -->
+
   			<div class="grid">
   				<div class="col-4of5" id="carttotal">
   					<div class="col-1of4" id="total">	
