--- a/Week5_Grids/choosenoodle.html
+++ b/Week5_Grids/choosenoodle.html
@@ -60,7 +60,7 @@
               <img id ="unselected" class="menu" src="img/noodle_egg.jpg" width="210" height="150">
               <p class="cartNrow">Egg Noodle</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Thin Noodle made with flour and eggs</p>
+              <p class="cartDrow">Thin lye-water noodles made with flour and eggs</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
@@ -69,7 +69,7 @@
   						<img class="menu"src="img/noodle_thick.jpg" width="210" heigh="150">
   						<p class="cartNrow">Thick Noodle</p>
   						<p class="cartProw">$2.00</p>
-              <p class="cartDrow">Thick Noodle made with flour and eggs</p>
+              <p class="cartDrow">Thick wheat noodle made with flour and eggs</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">10 Comments</a>
   					</div>
@@ -78,7 +78,7 @@
   						<img class="menu"src="img/noodle_thin.jpg" width="210" heigh="150">
               <p class="cartNrow">Thin Noodle</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Made with rice and water without salt</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
@@ -87,7 +87,7 @@
   						<img class="menu"src="img/noodle_rice.jpg" width="210" heigh="150">
               <p class="cartNrow">Rice Noodle</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Very wide, flat, rice noodles that are slippery</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
@@ -96,7 +96,7 @@
   						<img class="menu"src="img/noodle_instant.jpg" width="210" heigh="150">
               <p class="cartNrow">Instant Noodle</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Dried noodles made from wheat flour and salt</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
@@ -105,7 +105,7 @@
   						<img class="menu"src="img/noodle_udon.jpg" width="210" heigh="150">
               <p class="cartNrow">Undo</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Thick, rounded, wheat noodles</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
