--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -60,7 +60,7 @@
   						<img id ="unselected" class="menu"src="img/soup_chicken.jpg" width="210" heigh="150">
               <p class="cartNrow">Chicken Soup</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Boiled chicken soup with fresh ginger can fight against cold</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">18 Comments</a>
   					</div>
@@ -69,7 +69,7 @@
   						<img class="menu"src="img/soup_spicy.jpg" width="210" heigh="150">
               <p class="cartNrow">Spicy Seafood Soup</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Sweet shrimp, calamari, oyster and parsley</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
@@ -78,7 +78,7 @@
   						<img class="menu"src="img/soup_superspicy.jpg" width="210" heigh="150">
               <p class="cartNrow">Super Spicy Soup</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Sichuanese peppercorn, chili pepper and simmered with oil</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
@@ -87,7 +87,7 @@
   						<img class="menu"src="img/soup_tomato.jpg" width="210" heigh="150">
               <p class="cartNrow">Tomato Soup</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Small pieces of tomato, onion with chicken soup</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
@@ -105,7 +105,7 @@
   						<img class="menu"src="img/soup_medicine.jpg" width="210" heigh="150">
               <p class="cartNrow">Wolfberries Soup</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">A kind of chinese medicine that can preserve youth and health</p>
+              <p class="cartDrow">A chinese medicine that preserves youth and health</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
