--- a/Week5_Grids/choosetoppings.html
+++ b/Week5_Grids/choosetoppings.html
@@ -60,7 +60,7 @@
   						<img id ="unselected" class="menu"src="img/topping_pigblood.jpg" width="210" heigh="150">
               <p class="cartNrow">Pig's Blood</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Soft and tastless but cooked with our tasty soup</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
@@ -87,7 +87,7 @@
   						<img class="menu"src="img/topping_chickenwing.jpg" width="210" heigh="150">
               <p class="cartNrow">Chicken Wings</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Golden deep fried chicken wings by mixed flour salt</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
@@ -114,7 +114,7 @@
   						<img class="menu"src="img/topping_fishball.jpg" width="210" heigh="150">
               <p class="cartNrow">Curry Fishball</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Fried fishballs with yellow curry sauce, less spicy</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
@@ -142,7 +142,7 @@
               <img class="menu"src="img/topping_vege.jpg" width="210" heigh="150">
               <p class="cartNrow">Green Vegetable</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Seasonal choice, cabbage, pak choy and choy sun </p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
             </div>
@@ -151,7 +151,7 @@
               <img class="menu"src="img/topping_tomato.jpg" width="210" heigh="150">
               <p class="cartNrow">Tomato</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Five sliced fresh tomate, can ask for cooked tomate</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
             </div>
@@ -160,7 +160,7 @@
               <img class="menu"src="img/topping_tofu.jpg" width="210" heigh="150">
               <p class="cartNrow">Tofu</p>
               <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p class="cartDrow">Made by coagulating soy milk and result in soft white blocks</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
             </div>
