--- a/Week5_Grids/contact.html
+++ b/Week5_Grids/contact.html
@@ -50,30 +50,35 @@
           <h1 class="cartpage">STORES</h1>
         </div>
 
-  			<div class="col-4of5">
+  			<div id="store" class="col-4of5">
           <article id="paddingleft">
           <div class="col-1of2">
             <img class="contact"src="img/store2.jpg" width="300">
-            <a class="addtocart" href="menu.html">VIEW MENU</a>
           </div>
 
           <div class="col-1of2">
             <p class="cartNrow">ORIGINAL NOOD RESTAURANT - JOYCE</p>
-            <p class="contact">Address :<br>3318 Kingsway, Vancouver, BC V5R 5L1<br><br>Phone : (604) 123-3344<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday   12pm - 9pm<br>Wednesday   12pm - 9pm<br>Thursday   12pm - 9pm<br>Friday   12pm - 11pm<br>Satursday   12pm - 11pm<br>Sunday   12pm - 11pm</p>
+            <p class="contact">Address :<br>3318 Kingsway, Vancouver, BC V5R 5L1<br><br>Phone : (604) 123-3344<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday -  Thursday   12pm - 9pm<br>Friday - Sunday   12pm - 1am</p>
+            <a class="addtocart" href="menu.html">VIEW MENU</a>
           </div>
+          </article>
+        </div>
 
+        <div id="store" class="col-4of5">
+          <article id="paddingleft">
           <div class="col-1of2" id="secondstore">
             <img class="contact"src="img/store.jpg" width="300">
-            <a class="addtocart" href="menu.html">VIEW MENU</a>
           </div>
 
           <div class="col-1of2" id="secondstore">
             <p class="cartNrow">NEW! NOOD RESTAURANT - DOWNTOWN</p>
-            <p class="contact">Address :<br>527 Robson St, Vancouver, British Columbia V6B 2B7<br><br>Phone : (604) 123-4455<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday   12pm - 9pm<br>Wednesday   12pm - 9pm<br>Thursday   12pm - 9pm<br>Friday   12pm - 11pm<br>Satursday   12pm - 11pm<br>Sunday   12pm - 11pm</p>
+            <p class="contact">Address :<br>527 Robson St, Vancouver, British Columbia V6B 2B7<br><br>Phone : (604) 123-4455<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday -  Thursday   12pm - 9pm<br>Friday - Sunday   12pm - 1am</p>
+            <a class="addtocart" href="menu.html">VIEW MENU</a>
           </div>
+          </article>
         </div>
-          
-  		</div>
-      </article>
+
+      </div>
+    </article>
   	</body>
 </html>
