Home page, about page, news page and menu page are available for phone size, when screen size is at 400px.

--- a/Week5_Grids/about.html
+++ b/Week5_Grids/about.html
@@ -12,6 +12,22 @@
   	</head>
 
   	<body>
+      <div id="mobile" class="grid">
+        <nav id ="mobile"class="header">
+          <div class="col-oneoffive">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+          </div>
+          <div class="col-oneoffive">
+            <p><a href="menu.html">MENU</a></p>
+          </div>
+          <div class="col-twooffive">
+            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+          </div>
+          <div class="col-oneoffive">
+            <p><a href="cart.html">MY CART</a></p>
+          </div>
+        </nav>
+      </div>
   		<header class="grid">
   			<div class="col-6of24">
   				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
