--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -13,7 +13,27 @@
   	</head>
 
   	<body>
-  		<header class="grid">
+      <div id="mobile" class="grid">
+        <nav id ="mobile"class="header">
+          <div class="col-oneoffive">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+          </div>
+          <div class="col-oneoffive">
+            <p><a href="menu.html">MENU</a></p>
+          </div>
+          <div class="col-twooffive">
+            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+          </div>
+          <div class="col-oneoffive">
+            <p><a href="cart.html">MY CART</a></p>
+          </div>
+        </nav>
+        <div class="col-6of24">
+          <a  href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+        </div>
+      </div>
+
+  		<header id="windows" class="grid">
   			<div class="col-6of24">
   				<a  href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
