--- a/Week5_Grids/menu.html
+++ b/Week5_Grids/menu.html
@@ -13,6 +13,22 @@
   	</head>
 
   	<body>
+      <div id="mobile" class="grid">
+        <nav id ="mobile"class="header">
+          <div class="col-oneoffive">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+          </div>
+          <div class="col-oneoffive">
+            <p><a href="menu.html">MENU</a></p>
+          </div>
+          <div class="col-twooffive">
+            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+          </div>
+          <div class="col-oneoffive">
+            <p><a href="cart.html">MY CART</a></p>
+          </div>
+        </nav>
+      </div>
   		<header class="grid">
   			<div class="col-6of24">
   				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
@@ -62,7 +78,7 @@
               <!-- <img class="menu"src="img/nood1.jpg" width="210" height="150"> -->
 
               <div class="view-first">  
-                 <img class="menu"src="img/nood1.jpg" width="210" height="150">
+                  <a href="detailview.html"><img class="menu"src="img/nood1.jpg" width="210" height="150"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -75,7 +91,13 @@
   					</div>
 
   					<div class="col-1of3" id="menu">
-  						<img class="menu"src="img/nood2.jpg" width="210" height="150">
+  						<!-- <img class="menu"src="img/nood2.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/nood2.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Healthy Nood</p>
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Have a balanced meal, 2:1 in vegetables and meat</p>
@@ -84,7 +106,13 @@
   					</div>
 
   					<div class="col-1of3" id="menu">
-  						<img class="menu"src="img/nood3.jpg" width="210" height="150">
+  						<!-- <img class="menu"src="img/nood3.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/nood3.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Beef Lover</p>
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Beef balls, omasum, also with vegetables</p>
@@ -92,7 +120,13 @@
               <a class="prodcomment" href="">48 Comments</a>
   					</div>
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/nood4.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/nood4.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/nood4.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Pork Lover</p>
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Pig skin, pig's blood, pig intestine and sausage</p>
@@ -101,7 +135,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/nood5.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/nood5.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/nood5.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Vege Nood</p>
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Special nood for vegetarians, rice noodle with tomate soup</p>
@@ -110,7 +150,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/nood6.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/nood6.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/nood6.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Soft Nood</p>
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Special nood for who like soft food, different kinds of tofu</p>
@@ -122,7 +168,13 @@
   				<article id="soup">
             <h1 class="global">Soup</h1>
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/soup.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/soup.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/soup.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Carrot Pork Soup</p>
               <p class="cartProw">$3.50</p>
               <p class="cartDrow">Carrot, potato and pork ribs</p>
@@ -131,7 +183,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/soup_pork.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/soup_pork.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/soup_pork.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Corn Pork Soup</p>
               <p class="cartProw">$3.50</p>
               <p class="cartDrow">Corn, cabbage and juicy pork</p>
@@ -140,7 +198,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/soup_beef.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/soup_beef.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/soup_beef.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Beef Soup</p>
               <p class="cartProw">$3.50</p>
               <p class="cartDrow">Beef and lettuce in white soup</p>
@@ -170,7 +234,13 @@
   				<article id="drinks">
             <h1 class="global">Drinks</h1>
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/drink.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/drink.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/drink.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Ice Lemon Tea</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Iced red tea with slides of lemon</p>
@@ -179,7 +249,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/drink_redbean.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/drink_redbean.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/drink_redbean.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Ice Reb Bean</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">With vanilla ice cream and mixed red bean at the bottom</p>
@@ -188,7 +264,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/drink_milktea.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/drink_milktea.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/drink_milktea.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Ice Milktea</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Hong Kong style milktea, mixed with the milk and red tea</p>
@@ -227,7 +309,13 @@
   				<article id="dessert">
             <h1 class="global">Desserts</h1>
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/dessert.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/dessert.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/dessert.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">French Toast</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
@@ -236,7 +324,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/dessert_pineapplebutter.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/dessert_pineapplebutter.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/dessert_pineapplebutter.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Pineapple Butter Bun</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Pineapple sweet bun with a thick butter</p>
@@ -245,7 +339,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/dessert_portturnover.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/dessert_portturnover.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/dessert_portturnover.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Pork Turnover</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Ground pork and seasonings tucked inside</p>
@@ -254,7 +354,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/dessert_eggball.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/dessert_eggball.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/dessert_eggball.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Ball Waffle</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Made from eggs, sugar, flour and light evaporated milk</p>
@@ -263,7 +369,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/dessert_waffle.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/dessert_waffle.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/dessert_waffle.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Waffle</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Combine with sugar, condensed milk and butter</p>
@@ -272,7 +384,13 @@
             </div>
 
             <div class="col-1of3" id="menu">
-              <img class="menu"src="img/dessert_riceball.jpg" width="210" height="150">
+              <!-- <img class="menu"src="img/dessert_riceball.jpg" width="210" height="150"> -->
+              <div class="view-first">  
+                  <a href="detailview.html"><img class="menu"src="img/dessert_riceball.jpg" width="210" height="150"></a>
+                 <div class="mask">  
+                     <a href="detailview.html" class="info">VIEW DETAILS</a>  
+                 </div>  
+              </div>
               <p class="cartNrow">Rice Balls</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Made from glutinous rice and have red bean fillings</p>
