--- a/Week5_Grids/news.html
+++ b/Week5_Grids/news.html
@@ -12,6 +12,22 @@
   	</head>
 
   	<body>
+      <div id="mobile" class="grid">
+        <nav id ="mobile"class="header">
+          <div class="col-oneoffive">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+          </div>
+          <div class="col-oneoffive">
+            <p><a href="menu.html">MENU</a></p>
+          </div>
+          <div class="col-twooffive">
+            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+          </div>
+          <div class="col-oneoffive">
+            <p><a href="cart.html">MY CART</a></p>
+          </div>
+        </nav>
+      </div>
   		<header class="grid">
   			<div class="col-6of24">
   				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
@@ -47,28 +63,24 @@
       <article id="content">
   		<div class="grid">
   			<div class="col-1of5">
-          <a class="side" href="#news">New Product</a>
-          <a class="side" href="#promotion">Promotions</a>
-          <a class="side" href="#events">Events</a>
+          <a id ="newsmobile" class="side" href="#news">New Product</a>
+          <a id ="newsmobile" class="side" href="#promotion">Promotions</a>
+          <a id ="newsmobile" class="side" href="#events">Events</a>
   			</div>
 
   			<div class="col-4of5">
   				<article id="news">
           <h1 class="global">NEW PRODUCT</h1>
-            <div class="col-1of2">
-              <img class="contact"src="img/bignews1.jpg" width="300">
-            </div>
-            <div class="col-1of2">
-    					<h3>NEW STREET SNACK CART NOODLE</h3>
+             <img id ="newP" class="news" src="img/homeside_s1.jpg" width="300">
+    				  <h3>NEW STREET SNACK CART NOODLE</h3>
               <P class="news">It is one of the top three cart noodles. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</P>
               <!-- <a class="about" href="">VIEW DETAILS</a> -->
               <a class="about" href="cart.html">ADD TO CART</a>
-            </div>
   				</article>
 
   				<article id="promotion">
   					<h1 class="global">PROMOTIONS</h1>
-            <img class="contact"src="img/longnews.jpg">
+            <img class="news"src="img/longnews.jpg">
   					<P class="promotion">Offer valid beginning February 8, 2014 through March 31, 2014 in Nood Cart Noodle Restaurant and online at noodcartnoodle.com. Offer not valid outside Canada. Maximum discount available is $40.00. Purchase amount is calculated pre-tax and excludes purchases of gift cards. Cannot be applied to previous purchases. Cannot be used in combination with other offers or promotion codes on the same order, or in combination with Associate Discount. Promotion code must be entered at time of online purchase or presented in stores at time of make a order. Promo code is non-transferable. Discount will be applied to the bills to all eligible items and will be deducted upon return of any item to which the discount was applied. Purchase quantities may be limited. Not redeemable for cash or credit. Other restrictions may apply. Offer expires at 11:59pm PST. Promotion code: get1free</P>
             <a class="about" href="menu.html">VIEW MENU</a>
   				</article>
