--- a/Week5_Grids/cart.html
+++ b/Week5_Grids/cart.html
@@ -69,7 +69,7 @@
           <div class="col-4of5">
             <article id="paddingleftNext">
               <div class="col-2of4">
-                <img class="cart" src="img/nood1.jpg" width="80" heigh="80">
+                <img class="cart" src="img/nood1.jpg" width="80" height="80">
                 <h3 id="cartitemname">Fishball Nood</h3>
                 <p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
               </div>
@@ -87,7 +87,7 @@
           <div class="col-4of5">  
             <article id="paddingleftNext">
               <div class="col-2of4">
-                <img class="cart" src="http://placehold.it/80x80" width="80" heigh="80">
+                <img class="cart" src="img/sample.jpg" width="85">
                 <h3 id="cartitemname">My Noodle</h3>
                 <p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
               </div>
@@ -128,7 +128,7 @@
   		</article>
       
   		<article id="content2">
-  			<a class="cartBut2" href="buynow.html">BUY NOW</a>
+  			<a class="cartBut2" href="buynow.html">ORDER NOW</a>
   			<a class="cartBut" href="menu.html">BACK TO MENU</a>	
   		</article>
   	</body>
