--- a/Week5_Grids/donenood.html
+++ b/Week5_Grids/donenood.html
@@ -57,7 +57,7 @@
 	  				<article id="paddingleft">
 		  				<h1 class="global">MY OWN CART NOODLE</h1>
 		  				<div class="col-1of2">
-		  					<img class="menu"src="http://placehold.it/280x300" width="280" height="300">
+		  					<img class="menu"src="img/sample.jpg" width="280" height="300">
 		  				</div>
 
 		  				<div class="col-1of2">
@@ -68,8 +68,8 @@
 		  						<h3>Soup</h3>
 		  					</div>
 		  					<div class="col-1of3">
-		  						<h3>Egg Noodle</h3>
-		  						<h3>Beef Balls</h3>
+		  						<h3>Rice Noodle</h3>
+		  						<h3>Pig's Blood</h3>
 		  						<h3>Chicken Soup</h3>
 		  						<h2>TOTAL</h2>
 		  					</div>
