--- a/Week5_Grids/about.html
+++ b/Week5_Grids/about.html
@@ -70,7 +70,7 @@
   			<div class="col-4of5">
   				<article id="aboutus">
   					<h1 class="global">ABOUT US</h1>
-  					<P class="aboutus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
+  					<P class="aboutus">Nood, a Cart Noodle Restaurant, which sells cooked noodles in soup with an assortment of toppings and styles. It is a culture from Hong Kong. In 1950s, many independent street vendors operated on roadsides in low-income districts by using vendors and sold large quantities noodles for a cheap price, so cart noodle is a style of noodles.<br>Therefore, we sell cart noodles in stores and allow customers to customise their own cart noodles. We also want to provide quick ordering service and delivery service. We create this website that has a convenience self ordering in stores, better understand on the menu and the ingredients, flexible food ordering and cart noodle customization and helpful commmenting method on rating and giving feedback on our food and service.<br>Let's try a different meal in our restaurants.</P>
             <h2>"Experience the cart noodle culture in store and provide the best customer service."</h2>
             <img class="about" src="img/about.jpg" width="688">
             <a class="about" href="contact.html">CONTACT US</a>
@@ -78,7 +78,7 @@
 
   				<article id="history">
   					<h1 class="global">HISTORY</h1>
-  					<P class="history">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
+  					<P class="history">In 1950s, Sam Wong was a independent street vendor operated on roadsides in Shau Kei Wan, a low-income district in Hong Kong. He used his vendor and sold large quantities noodles for a cheap price, which benefits the locals.<br>He starts his cart noodle restaurant since his twenties. In 1960s, Sam earned </P>
             <h2>"From cart to restaurant, effort only fully releases its reward after we refuse to quit."</h2>
             <img class="about" src="img/history.jpg">
             <a class="about" href="news.html">OUR NEWS</a>
