--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -14,23 +14,21 @@
 
   	<body>
       <div id="mobile" class="grid">
-        <nav id ="mobile"class="header">
-          <div class="col-oneoffive">
-            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+          <div class="col-twoofseven">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-          <div class="col-oneoffive">
-            <p><a href="menu.html">MENU</a></p>
+
+          <nav id ="mobile"class="header">
+          <div class="col-twoofseven">
+            <p><a href="menu.html">FOOD MENU</a></p>
           </div>
-          <div class="col-twooffive">
+          <div class="col-twoofseven">
             <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
           </div>
-          <div class="col-oneoffive">
-            <p><a href="cart.html">MY CART</a></p>
+          <div class="col-oneofseven">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
           </div>
-        </nav>
-        <div class="col-6of24">
-          <a  href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-        </div>
+        </nav>   
       </div>
 
   		<header id="windows" class="grid">
@@ -66,7 +64,7 @@
   			</nav>
   		</header>
 
-      <article id="content">
+      <article id="content3">
     		<div class="grid">
     			<div class="col-1of3">
             <div class="rowGlobal">
@@ -86,7 +84,7 @@
             <div class="rowGlobalsideimage">
               <a href="index.html"><p class="homesideonpage"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p></a>
 
-              <a href="index2.html"><p class="homeside"><img class="homeside"src="img/homeside_s2.jpg" width="250" height="40">NEW STORE OPENS IN DOWNTOWN</p></a>
+              <a href="index2.html"><p class="homeside"><img class="homeside"src="img/homeside_s2.jpg" width="250" height="40">NEW STORE OPENS</p></a>
 
               <a href="index3.html"><p class="homeside"><img class="homeside"src="img/homeside_s3.jpg" width="250" height="40">PROMOTION CODE: get1free</p></a>
             </div>
