--- a/Week5_Grids/menu.html
+++ b/Week5_Grids/menu.html
@@ -14,20 +14,21 @@
 
   	<body>
       <div id="mobile" class="grid">
-        <nav id ="mobile"class="header">
-          <div class="col-oneoffive">
-            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
+          <div class="col-twoofseven">
+            <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
-          <div class="col-oneoffive">
-            <p><a href="menu.html">MENU</a></p>
+
+          <nav id ="mobile"class="header">
+          <div class="col-twoofseven">
+            <p><a href="menu.html">FOOD MENU</a></p>
           </div>
-          <div class="col-twooffive">
+          <div class="col-twoofseven">
             <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
           </div>
-          <div class="col-oneoffive">
-            <p><a href="cart.html">MY CART</a></p>
+          <div class="col-oneofseven">
+            <p class="mobile"><a class="menutop"><span class="line"></span></a></p>      
           </div>
-        </nav>
+        </nav>   
       </div>
   		<header class="grid">
   			<div class="col-6of24">
