--- a/Week5_Grids/news.html
+++ b/Week5_Grids/news.html
@@ -71,7 +71,7 @@
   			<div class="col-4of5">
   				<article id="news">
           <h1 class="global">NEW PRODUCT</h1>
-             <img id ="newP" class="news" src="img/homeside_s1.jpg" width="300">
+             <img id ="newP" class="news" src="img/newproduct.jpg" width="300">
     				  <h3>NEW STREET SNACK CART NOODLE</h3>
               <P class="news">It is one of the top three cart noodles. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</P>
               <!-- <a class="about" href="">VIEW DETAILS</a> -->
